# plutus-groth16-wrapper

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Makefile  README.md
.agents/skills/handoff/: SKILL.md
.claude/hooks/: block-dangerous-git.sh
.claude/skills/: caveman  diagnose  grill-me  grill-with-docs  handoff  improve-codebase-architecture  tdd  to-issues  zoom-out
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  security.yml
docs/: implementation-plan.md  initial-proposal.md  journal.md
docs/adr/: 0001-direct-outer-public-signals.md  0002-universal-wrapper-circuit.md  0003-file-based-plugin-prover-boundary.md  0004-gnark-prover-cli.md  0004-rust-plugin-owns-aiken-codegen.md  0005-poseidon2-bls12381-for-inner-vk-hash.md  0006-pedersen-commitment-check-on-cardano.md  0007-two-axis-aiken-codegen.md  0008-prover-invocation-model.md
docs/agents/: domain.md
docs/research/: circom-wrapping-circuit-feasibility.md  gnark-recursive-verification-benchmarks.md  risc0-artifact-format.md  risc0-ethereum-architecture.md  snarkjs-cardano-aiken-verifiers.md  sp1-artifact-format-v6.md  sp1-artifact-format.md
docs/schemas/: canonical-inner-proof.md  outer-proof-artifacts.md  plonk-outer-proof-artifacts.md
docs/tasks/: risc0-artifact-exploration.md  risc0-gnark-verify.md  sp1-artifact-exploration.md
examples/risc0-aiken-groth16/: Cargo.toml  README.md
examples/risc0-aiken-groth16/methods/: Cargo.toml
examples/risc0-aiken-groth16/src/: main.rs
examples/risc0-aiken-plonk/: Cargo.toml  README.md
examples/risc0-aiken-plonk/methods/: Cargo.toml
examples/risc0-aiken-plonk/src/: main.rs
examples/sp1-aiken-groth16/: Cargo.toml  README.md  build.rs
examples/sp1-aiken-groth16/src/: main.rs
examples/sp1-aiken-plonk/: Cargo.toml  README.md  build.rs
examples/sp1-aiken-plonk/program/: Cargo.toml
examples/sp1-aiken-plonk/src/: main.rs
experiments/: README.md
experiments/aiken-plonk-spike/: .gitignore  README.md  go.mod
experiments/aiken-plonk-spike/aiken/: aiken.toml
experiments/aiken-plonk-spike/artifacts/: golden.json  outer_proof.json  outer_vk.json
experiments/aiken-plonk-spike/export/: main.go
experiments/aiken-plonk-spike/gen-fixture/: main.go
experiments/aiken-plonk-spike/refverify/: main.go
experiments/aiken-verifier-spike/: .gitignore  README.md  aiken.toml
experiments/aiken-verifier-spike/validators/: spike.ak
experiments/risc0-gnark-verifier/: go.mod
experiments/risc0-gnark-verifier/parse/: parse.go
experiments/risc0-gnark-verifier/recursive/: main.go
experiments/risc0-gnark-verifier/recursive_plonk/: main.go
experiments/risc0-gnark-verifier/verify/: main.go
experiments/risc0-gnark-verify/: go.mod  go.sum  main.go
experiments/risc0-hello-world/: Cargo.toml
experiments/risc0-hello-world/fixtures/: README.md  manifest.json  public_inputs.json  receipt.json
experiments/risc0-hello-world/methods/: Cargo.toml
experiments/risc0-hello-world/methods/guest/: Cargo.toml
experiments/sp1-gnark-verifier/: go.mod
experiments/sp1-gnark-verifier/parse/: parse.go
experiments/sp1-gnark-verifier/recursive/: main.go
experiments/sp1-gnark-verifier/recursive_plonk/: main.go
experiments/sp1-gnark-verifier/verify/: main.go
experiments/sp1-hello-world/: Cargo.toml  build.rs
experiments/sp1-hello-world/program/: Cargo.toml
experiments/sp1-hello-world/program/elf/: riscv32im-succinct-zkvm-elf
experiments/sp1-v6-hello-world/: .gitignore  Cargo.toml  README.md  build.rs
experiments/sp1-v6-hello-world/program/: Cargo.toml
fixtures/: README.md  sp1-outer-proof.json
fixtures/canonical-inner/risc0-hello-world/: meta.json
fixtures/canonical-inner/sp1-hello-world/: meta.json
fixtures/groth16-setup/: outer_vk.json
fixtures/outer-proofs/: risc0-groth16-outer-proof.json  risc0-plonk-outer-proof.json  sp1-plonk-outer-proof.json
fixtures/plonk-setup/: outer_vk.json
fixtures/risc0-hello-world/: manifest.json  vk.json
fixtures/sp1-hello-world/: manifest.json  public_inputs.json
zkwrap-gnark/: go.mod  go.sum
zkwrap-gnark/cmd/gen-testdata/: main.go
zkwrap-gnark/cmd/zkwrap-gnark/: main.go
zkwrap-gnark/internal/artifacts/: hex.go  proof.go  proof_test.go  setup.go  vk.go  vk_test.go
zkwrap-gnark/internal/circuit/: circuit.go  circuit_test.go  dump_vectors_test.go  vkhash.go
zkwrap-gnark/internal/cli/: cli_test.go  flags.go  integration_test.go  prove.go  run.go  setup.go  verify.go
zkwrap-gnark/internal/inner/: load.go  load_test.go
zkwrap-gnark/internal/outer/: backend.go  codec.go  hex.go  proof.go  proof_test.go  setup.go  vk.go  vk_test.go
zkwrap-gnark/internal/subcommands/: cli.go  cli_test.go  flags.go  (+4 more)
zkwrap-gnark/testdata/: groth16-outer-proof.json
zkwrap-rs/: Cargo.toml  deny.toml  rust-toolchain.toml
zkwrap-rs/zkwrap-core/: Cargo.toml
zkwrap-rs/zkwrap-core/src/: codegen.rs  composer.rs  groth16.ak.jinja  groth16.rs  inner.rs  lib.rs  outer.rs  outer_backends.rs  outer_proof.rs  poseidon2.rs  test_vectors.rs  vk_hash.rs
zkwrap-rs/zkwrap-core/src/codegen/: composer.rs  outer_tests.rs  verify.ak.jinja
zkwrap-rs/zkwrap-core/src/outer_backends/: gnark_groth16.rs  gnark_plonk.rs
zkwrap-rs/zkwrap-core/src/outer_backends/gnark_groth16/: artifacts.rs  layer1.ak.jinja  outer.ak.jinja  vk_hash.rs
zkwrap-rs/zkwrap-core/src/outer_backends/gnark_groth16/vk_hash/: poseidon2.rs  test_vectors.rs
zkwrap-rs/zkwrap-core/src/outer_backends/gnark_plonk/: artifacts.rs  plonk.ak.jinja
zkwrap-rs/zkwrap-core/testdata/: inner_vk_hash_vectors.json
zkwrap-rs/zkwrap-prover/: Cargo.toml
zkwrap-rs/zkwrap-risc0/: Cargo.toml
zkwrap-rs/zkwrap-risc0/src/: canonicalize.rs  codegen.rs  lib.rs  risc0.ak  validator.rs
zkwrap-rs/zkwrap-risc0/src/codegen/: risc0.ak
zkwrap-rs/zkwrap-risc0/tests/: gen_verifier_from_disk.rs  generates_passing_project.rs
zkwrap-rs/zkwrap-sp1/: Cargo.toml
zkwrap-rs/zkwrap-sp1/src/: canonicalize.rs  codegen.rs  lib.rs  validator.rs
zkwrap-rs/zkwrap-sp1/src/codegen/: sp1.ak
zkwrap-rs/zkwrap-sp1/tests/: gen_verifier_from_disk.rs  generates_passing_project.rs
(+20 files in other folders)
