[package]
name = "sp1-aiken-groth16"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# SP1 local Groth16 proving (native-gnark = CGO gnark FFI; blocking = sync API;
# no network feature).
sp1-sdk = { version = "6.2.4", features = ["native-gnark", "blocking"], default-features = false }
# Build OpenSSL from source so the build needs no system libssl-dev / pkg-config
# (sp1-prover pulls reqwest → native-tls → openssl-sys transitively).
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4"
serde_json = "1"

# The toolkit under test (path deps across the zkwrap-rs workspace boundary).
zkwrap-core = { path = "../../zkwrap-rs/zkwrap-core" }
zkwrap-prover = { path = "../../zkwrap-rs/zkwrap-prover" }
zkwrap-sp1 = { path = "../../zkwrap-rs/zkwrap-sp1" }

[build-dependencies]
sp1-build = "6.2.4"
