[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]

[dependencies]
hello-world-methods = { path = "methods" }
risc0-zkvm = { version = "^3.0.5" }
serde_json = { version = "1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
