[package]
name = "sp1-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { version = "3.4.0", features = ["native-gnark"], default-features = false }
serde_json = "1"
hex = "0.4"
dirs = "5"
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
sp1-build = "3.4.0"
