[package]
name = "zkwrap-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ark-ff = "0.6"
ark-ec = "0.6"
ark-bn254 = "0.6"
ark-bls12-381 = "0.6"
sha3 = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
minijinja = "2"

[dev-dependencies]
