[package]
name = "zkwrap-risc0"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zkwrap-core = { path = "../zkwrap-core" }
serde_json = "1"
hex = "0.4"
thiserror = "2"

risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std"] }
risc0-groth16 = "=3.0.4"
risc0-circuit-recursion = { version = "=4.0.4", default-features = false }
ark-bn254 = "0.6"
ark-ff = "0.6"
ark-groth16 = "0.6"
ark-serialize = "0.6"
