[package]
name = "zkwrap-sp1"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zkwrap-core = { path = "../zkwrap-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "2"
sha2 = "0.11"

ark-bn254 = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"

sp1-verifier = { version = "6.2.4", default-features = false, features = ["ark"] }
