[package]
name = "zkwrap-sp1"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zkwrap-core = { path = "../zkwrap-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "2"
sha2 = "0.10"

ark-bn254 = "0.6"
ark-ff = "0.6"
ark-groth16 = "0.6"

sp1-verifier = { version = "6.2.4", default-features = false, features = ["ark"] }
